--- a/suporte.html
+++ b/suporte.html
@@ -30,11 +30,69 @@
     .drawer-panel.show{ transform: translateX(0); }
   </style>
 </head>
-<body class="min-h-screen bg-slate-950 text-white">
+<body class="min-h-screen bg-white text-slate-900">
 
+  
   <div id="sidebar-overlay" class="fixed inset-0 z-40 hidden bg-black/50"></div>
   <aside id="sidebar" class="fixed left-0 top-0 z-50 h-full w-[280px] -translate-x-full bg-slate-950/95 backdrop-blur border-r border-white/10 transition-transform">
     <div class="p-4 border-b border-white/10 flex items-center justify-between">
+      <div class="flex items-center gap-2">
+        <div class="h-9 w-9 rounded-xl bg-emerald-500/15 ring-1 ring-emerald-400/20 flex items-center justify-center">
+          <i data-lucide="shield" class="h-5 w-5 text-emerald-300"></i>
+        </div>
+        <div class="leading-tight">
+          <div class="text-white font-black">Guilda HUB</div>
+          <div class="text-xs text-slate-400">Eventos • Camps • Stats</div>
+        </div>
+      </div>
+      <button id="sidebar-close" class="h-10 w-10 grid place-items-center rounded-xl hover:bg-white/5">
+        <i data-lucide="x" class="h-5 w-5 text-slate-200"></i>
+      </button>
+    </div>
+
+    <nav class="p-3 space-y-1">
+      <a href="index.html" class="flex items-center gap-3 px-3 py-2 rounded-xl text-slate-200 hover:bg-white/5">
+        <i data-lucide="log-in" class="h-4 w-4"></i>
+        <span class="font-semibold">Entrar</span>
+      </a>
+      <a href="eventos.html" class="flex items-center gap-3 px-3 py-2 rounded-xl text-slate-200 hover:bg-white/5">
+        <i data-lucide="calendar" class="h-4 w-4"></i>
+        <span class="font-semibold">Eventos e Camp</span>
+      </a>
+      <a href="stats.html" class="flex items-center gap-3 px-3 py-2 rounded-xl text-slate-200 hover:bg-white/5">
+        <i data-lucide="bar-chart-3" class="h-4 w-4"></i>
+        <span class="font-semibold">Minhas estatísticas</span>
+      </a>
+      <a href="suporte.html" class="flex items-center gap-3 px-3 py-2 rounded-xl text-slate-200 hover:bg-white/5">
+        <i data-lucide="help-circle" class="h-4 w-4"></i>
+        <span class="font-semibold">Suporte</span>
+      </a>
+    </nav>
+
+    <div class="mt-auto p-4 text-xs text-slate-400 border-t border-white/10">
+      <div class="leading-relaxed">Dica: você pode navegar sem login para ver eventos e consultar stats públicas.</div>
+    </div>
+  </aside>
+
+<header class="sticky top-0 z-30 bg-white/80 backdrop-blur border-b border-slate-200">
+    <div class="mx-auto w-full max-w-6xl px-4 py-3 flex items-center justify-between">
+      <div class="flex items-center gap-3">
+        <button id="mobile-menu-btn" class="h-10 w-10 grid place-items-center rounded-xl bg-slate-900 text-white shadow-sm">
+          <i data-lucide="menu" class="h-5 w-5"></i>
+        </button>
+        <div class="leading-tight">
+          <div class="font-black text-slate-900">Guilda HUB</div>
+          <div class="text-xs text-slate-500">Eventos • Camps • Stats</div>
+        </div>
+      </div>
+      <a href="index.html" class="text-sm font-semibold text-emerald-700 hover:text-emerald-800">Voltar</a>
+    </div>
+  </header>
+
+
+  <div id="sidebar-overlay" class="fixed inset-0 z-40 hidden bg-black/50"></div>
+  <aside id="sidebar" class="fixed left-0 top-0 z-50 h-full w-[280px] -translate-x-full bg-slate-950/95 backdrop-blur border-r border-slate-200 transition-transform">
+    <div class="p-4 border-b border-slate-200 flex items-center justify-between">
       <div class="flex items-center gap-2">
         <div class="h-9 w-9 rounded-xl bg-emerald-500/15 ring-1 ring-emerald-400/20 flex items-center justify-center">
           <i data-lucide="shield" class="h-5 w-5 text-emerald-300"></i>
@@ -54,12 +112,12 @@
       <a href="/stats" class="flex items-center gap-3 rounded-xl px-3 py-2 text-sm font-semibold transition text-slate-200 hover:bg-white/10"><i data-lucide="chart-no-axes-column" class="h-4 w-4"></i><span>Minhas estatísticas</span></a>
       <a href="/suporte" class="flex items-center gap-3 rounded-xl px-3 py-2 text-sm font-semibold transition bg-emerald-600 text-white"><i data-lucide="headset" class="h-4 w-4"></i><span>Suporte</span></a>
     </nav>
-    <div class="mt-auto p-4 text-xs text-slate-500 border-t border-white/10">
+    <div class="mt-auto p-4 text-xs text-slate-500 border-t border-slate-200">
       Dica: se algo não carregar, atualize a página e tente novamente.
     </div>
   </aside>
 
-<header class="sticky top-0 z-30 border-b border-white/10 bg-slate-950/80 backdrop-blur">
+<header class="sticky top-0 z-30 border-b border-slate-200 bg-slate-950/80 backdrop-blur">
   <div class="mx-auto w-full max-w-6xl px-4 py-4 flex items-center gap-3">
     <button id="sidebar-open" type="button"
       class="inline-flex h-11 w-11 items-center justify-center rounded-2xl bg-white/10 text-white ring-1 ring-white/10 transition hover:bg-white/15"
@@ -74,7 +132,7 @@
 </header>
 <main class="mx-auto w-full max-w-6xl px-4 py-6">
 <section class="space-y-4">
-  <article class="rounded-3xl bg-white/5 ring-1 ring-white/10 p-5">
+  <article class="rounded-3xl bg-white ring-1 ring-slate-200 p-5">
     <div class="flex items-start justify-between gap-3">
       <div>
         <h2 class="text-lg font-black">Suporte</h2>
@@ -91,7 +149,7 @@
 
     <div class="mt-5 grid grid-cols-1 gap-3 sm:grid-cols-2">
       <a href="https://instagram.com/guildahub" target="_blank" rel="noopener noreferrer"
-        class="rounded-2xl bg-white/5 ring-1 ring-white/10 p-4 hover:bg-white/10 transition">
+        class="rounded-2xl bg-white ring-1 ring-slate-200 p-4 hover:bg-white/10 transition">
         <div class="flex items-center gap-3">
           <div class="h-10 w-10 rounded-2xl bg-pink-500/15 ring-1 ring-pink-400/20 flex items-center justify-center">
             <i data-lucide="instagram" class="h-5 w-5 text-pink-200"></i>
@@ -104,7 +162,7 @@
       </a>
 
       <a href="https://chat.whatsapp.com/FsBRk3VNaGm29UmXldwaOE?mode=gi_t" target="_blank" rel="noopener noreferrer"
-        class="rounded-2xl bg-white/5 ring-1 ring-white/10 p-4 hover:bg-white/10 transition">
+        class="rounded-2xl bg-white ring-1 ring-slate-200 p-4 hover:bg-white/10 transition">
         <div class="flex items-center gap-3">
           <div class="h-10 w-10 rounded-2xl bg-emerald-500/15 ring-1 ring-emerald-400/20 flex items-center justify-center">
             <i data-lucide="message-circle" class="h-5 w-5 text-emerald-200"></i>
@@ -149,7 +207,15 @@
 
 <script>lucide.createIcons();</script>
 <script type="module">
-/* estático */
+
+import { setupSidebar, initIcons } from './logic.js';
+setupSidebar();
+initIcons();
+document.getElementById('sidebar-close')?.addEventListener('click', ()=>{ 
+  document.getElementById('sidebar')?.classList.add('-translate-x-full');
+  document.getElementById('sidebar-overlay')?.classList.add('hidden');
+});
+
 </script>
 </body>
 </html>
